# nnunet-training

./: .env.example  .gitignore  FIXES_APPLIED.md  README.md  nnunet_colab.ipynb  nnunet_kaggle.ipynb  pyproject.toml  requirements.txt
configs/: dataset.yaml  experiment.yaml
scripts/: 01_prepare_dataset.py  02_preprocess.py  03_train.py  04_inference.py  05_evaluate.py  06_visualize.py  07_generate_sam_prompts.py  check_checkpoints.py  check_integrity.py  resume_training.sh  run_evaluation.sh  run_inference.sh  run_pipeline.sh  run_prompt_generation.sh  run_training.sh
src/: __init__.py
src/data/: __init__.py  converter.py  dataset_json.py  integrity_checker.py  splitter.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  results_aggregator.py
src/inference/: __init__.py  predictor.py  prompt_builder.py
src/training/: __init__.py  checkpoint_manager.py  cross_validation.py  early_stopping.py  fold_logger.py  log_parser.py  nnunet_trainer_es.py  reproducibility.py  trainer.py
src/utils/: __init__.py  env_utils.py  experiment_tracker.py  logging_utils.py
src/visualization/: __init__.py  plotter.py
tests/: test_metrics.py  test_prompt_builder.py
